adding the php type cast mode, where string data that represents a valid double or integer is validated ok agains a schema definition of number or integer.
git-svn-id: https://jsonschemaphpv.svn.sourceforge.net/svnroot/jsonschemaphpv/trunk@4 14558f9d-7ea9-46ec-92da-52a2cad6a683

--- a/validator.html
+++ b/validator.html
@@ -41,6 +41,9 @@
 <button id='bt-validate-php' class='botao'>
   Validate With PHP
 </button>
+<button id='bt-validate-php-type-cast-mode' class='botao'>
+  Validate With PHP (type cast mode)
+</button>
 <br/>
 <div id='resultados'>...</div>
 </body>
