--- a/webroot/tests/validator.html
+++ b/webroot/tests/validator.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<script type="text/javascript" src="jsonschema.js"></script>
-<script type="text/javascript" src="functions.js"></script>
-<script type="text/javascript" src="jquery.js"></script>
-<script type="text/javascript" src="interface.js"></script>
-<link rel="stylesheet" type="text/css" href="interface.css" />
+<script type="text/javascript" src="../js/jsonschema.js"></script>
+<script type="text/javascript" src="../js/functions.js"></script>
+<script type="text/javascript" src="../js/jquery.js"></script>
+<script type="text/javascript" src="../js/interface.js"></script>
+<link rel="stylesheet" type="text/css" href="../css/interface.css" />
 
 </head>
 
